--- a/ablis-style.css
+++ b/ablis-style.css
@@ -87,8 +87,8 @@ a.ablis-logo {
 
 section {
   margin-bottom: 50px;
-  border-bottom: 1px solid #d7d7d7;
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+  border-bottom: 1px solid #d7d7d7; }
 
 html, body {
   font-family: 'Open Sans', sans-serif;
@@ -101,13 +101,19 @@ h1, h2, h3, h4, h5, h6 {
   border: none;
   font-size: 48px;
   font-weight: 600;
-  line-height: 1.2; }
+  line-height: 1.2;
+  letter-spacing: -1px; }
 
 .typography p {
   line-height: 1.5; }
 
+.typography .text-muted {
+  margin-bottom: 30px; }
+
 h4.caption {
-  font-size: 16px; }
+  font-size: 16px;
+  padding-top: 10px;
+  margin-bottom: 30px; }
 
 .btn-primary {
   color: #fff;
