--- a/dashboard.css
+++ b/dashboard.css
@@ -14,7 +14,7 @@ body {
 h1 {
   margin-bottom: 20px;
   padding-bottom: 9px;
-  border-bottom: 1px solid #eee;
+/*  border-bottom: 1px solid #eee;*/
 }
 
 /*
